remove enum/flags_to_string, attribute gsignal/gproperty to kiwi

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,2 +1,5 @@
 Ali Afshar <aafshar@gmail.com>
 Ronny Pfannschmidt <Ronny.Pfannschmidt@gmx.de>
+
+.. note::
+    pygtkhelpers.utils.gsignal/gproperty are taken from kiwi
