--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,5 +1,6 @@
 Ali Afshar <aafshar@gmail.com>
 Ronny Pfannschmidt <Ronny.Pfannschmidt@gmx.de>
+Daniel Neuhäuser <dasdasich@gmail.com>
 
 .. note::
     pygtkhelpers.utils.gsignal/gproperty are taken from kiwi
