Add auto git-describe version for Python packag...
Add automatic Python package versioning using `git-describe` through the
`version.py` module from [here][1].

A Python package source distribution can be built using the following
command:

    python setup.py sdist

__NB__ The version strings generated by `version.getVersion()` conform
to [PEP386][2].

[1]: https://gist.github.com/mina86/8782771
[2]: http://www.python.org/dev/peps/pep-0386

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,6 +1,7 @@
 Ali Afshar <aafshar@gmail.com>
 Ronny Pfannschmidt <Ronny.Pfannschmidt@gmx.de>
 Daniel Neuhäuser <dasdasich@gmail.com>
+Christian Fobel <christian@fobel.net>
 
 .. note::
     pygtkhelpers.utils.gsignal/gproperty are taken from kiwi
